[project]
name = "prolif"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mdanalysis>=2.9.0",
    "mdtraj>=1.11.0",
    "ipykernel>=6.30.1",
    "prolif",
    "rdkit>=2025.3.5",
    "seaborn>=0.13.2",
    "py3dmol>=2.5.2",
    "jupyter-contrib-nbextensions>=0.7.0",
    "jupyter-nbextensions-configurator>=0.6.4",
    "jupyterlab>=4.4.6",
    "jupyterlab-widgets>=3.0.15",
    "jupyterlab-hide-code>=4.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "mdtraj>=1.11.0",
    "prolif",
    "rdkit>=2025.3.5",
]

[tool.uv.sources]
prolif = { workspace = true }
